--- a/locale/ca.po
+++ b/locale/ca.po
@@ -4,7 +4,7 @@ msgid ""
 msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Last-Translator: Albert Cervera i Areny <albert@nan-tic.com>\n"
-"PO-Revision-Date: 2023-08-17 12:54+0200\n"
+"PO-Revision-Date: 2023-08-17 13:19+0200\n"
 "Project-Id-Version: \n"
 "Language-Team: Catalan <kde-i18n-ca@kde.org>\n"
 "Language: ca_ES\n"
@@ -162,6 +162,10 @@ msgstr "Quantitat (sense conversió d'UdM)"
 msgctxt "model:babi.expression,name:stock_move_self"
 msgid "Move"
 msgstr "Moviment"
+
+msgctxt "model:babi.expression,name:stock_move_shipment"
+msgid "Shipment"
+msgstr "Albarà"
 
 msgctxt "model:babi.expression,name:stock_move_state"
 msgid "State"
